tests/parser-test-files/bad-files/parse-match.1.coal
;; BAD: Parse Match
(package test-package)

(define f (match))
